--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "author": "Daniel Evgrafov",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.1",
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
